# CellExLink_software

./: .gitignore  CITATION.cff  Dockerfile  LICENSE.txt  MANIFEST.in  README.md  docker-compose.yml  environment.yml  pyproject.toml  requirements-benchmarks.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
benchmarks/: README.md  benchmark_utils.py  eval_original_compatible.py  evaluate_end_to_end.py  evaluate_nen.py  evaluate_ner.py  make_tables.py  run_cellexlink.py  runtime_eval.py
benchmarks/baselines/: README.md
benchmarks/baselines/bern2/: README.md  run_bern2.py
benchmarks/baselines/results/: RAEDME.md  reference_table2_ner_results.csv  reference_table4_runtime_results.csv  reference_table5_gold_span_normalization_results.csv  reference_table6_linker_selection_results.csv  reference_table7_end_to_end_results.csv
benchmarks/baselines/scispacy/: README.md  environment.yml  predict_nen.py  predict_ner.py  run_scispacy.py
benchmarks/baselines/vaner2/: README.md  run_vaner2.py
benchmarks/data/evaluation/AnatEM/: test.xml
benchmarks/data/evaluation/CRAFT/: test.xml
benchmarks/data/evaluation/Celllink/: test.xml  test2.xml
benchmarks/data/evaluation/JNLPBA/: test.xml
docker/: README.md  docker_smoke_test.sh  docker_test.py
docs/: benchmarking.md  input_output.md  installation.md  model_checkpoints.md  troubleshooting.md  usage.md
examples/: qucikstart_bioc.py  quickstart_api.py  quickstart_bioc.py  quickstart_text.py  sample_input.txt  sample_input.xml
scripts/: build_cell_ontology_resources.py  download_models.py
src/cellexlink/: __init__.py  cli.py  io.py  pipeline.py
src/cellexlink/io/: __init__.py  bioc.py  jsonl.py  schemas.py
src/cellexlink/normalization/: __init__.py  abbreviations.py  linker.py  ontology.py  stemmer.py  train.py
src/cellexlink/recognition/: __init__.py  bioc.py  hf_utils.py  ner_common.py  predict.py  train.py
src/cellexlink/resources/: abbreviations.tsv  cell_ontology_v2025-12-17.jsonl
tests/: test_abbreviations.py  test_api_smoke.py  test_bioc_io.py  test_cli_help.py  test_import.py  test_pipeline_smoke.py
