[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellexlink"
version = "0.1.0"
description = "End-to-end cell-type recognition and Cell Ontology normalization from biomedical text"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE.txt" }

authors = [
  { name = "Shahriyari Lab" }
]

maintainers = [
  { name = "Shahriyari Lab" }
]

keywords = [
  "biomedical NLP",
  "named entity recognition",
  "named entity normalization",
  "entity linking",
  "Cell Ontology",
  "cell type extraction",
  "BioC"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Text Processing :: Linguistic"
]

dependencies = [
  "accelerate>=0.34",
  "bioc>=2.1",
  "datasets>=2.19",
  "huggingface-hub>=0.24",
  "numpy>=1.26,<3",
  "scipy>=1.11",
  "sentence-transformers>=3.0",
  "torch>=2.4",
  "tqdm>=4.66",
  "transformers>=4.45"
]

[project.optional-dependencies]
abbr = [
  "pyab3p>=0.1.1"
]

training = [
  "seqeval>=1.2.2"
]

benchmarks = [
  "matplotlib>=3.8",
  "pandas>=2.2",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "tabulate>=0.9"
]

dev = [
  "black>=24.8",
  "build>=1.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "seqeval>=1.2.2",
  "twine>=5.1"
]

all = [
  "black>=24.8",
  "build>=1.2",
  "matplotlib>=3.8",
  "pandas>=2.2",
  "pyab3p>=0.1.1",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "requests>=2.32",
  "ruff>=0.6",
  "scikit-learn>=1.5",
  "seqeval>=1.2.2",
  "tabulate>=0.9",
  "twine>=5.1"
]

[project.urls]
Homepage = "https://github.com/ShahriyariLab/CellExLink-End-to-End-Cell-Type-Extraction-and-Cell-Ontology-Normalization-from-Biomedical-Text"
Repository = "https://github.com/ShahriyariLab/CellExLink-End-to-End-Cell-Type-Extraction-and-Cell-Ontology-Normalization-from-Biomedical-Text"
Issues = "https://github.com/ShahriyariLab/CellExLink-End-to-End-Cell-Type-Extraction-and-Cell-Ontology-Normalization-from-Biomedical-Text/issues"

[project.scripts]
cellexlink = "cellexlink.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cellexlink = [
  "resources/*.tsv",
  "resources/*.jsonl"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "slow: requires downloaded model checkpoints, external services, or GPU resources"
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
  "E501"
]