[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cellexlink"
version = "0.1.0"
description = "End-to-end cell-type recognition and Cell Ontology normalization from biomedical text"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE.txt" }
authors = [
  { name = "Shahriyari Lab and CellExLink contributors" }
]
maintainers = [
  { name = "Shahriyari Lab" }
]
keywords = [
  "biomedical NLP",
  "named entity recognition",
  "named entity normalization",
  "entity linking",
  "Cell Ontology",
  "cell-type extraction",
  "BioC"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Text Processing :: Linguistic"
]
dependencies = [
  "accelerate>=0.34",
  "bioc>=2.1",
  "huggingface-hub>=0.24",
  "numpy>=1.26,<3",
  "pyab3p>=0.1.1",
  "scipy>=1.11",
  "sentence-transformers>=3.0",
  "torch>=2.4",
  "tqdm>=4.66",
  "transformers>=4.45"
]

[project.optional-dependencies]
benchmarks = [
  "pandas>=2.2",
  "scikit-learn>=1.5",
  "tabulate>=0.9"
]
dev = [
  "build>=1.2",
  "pandas>=2.2",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "scikit-learn>=1.5",
  "tabulate>=0.9",
  "twine>=5.1"
]

[project.urls]
Homepage = "https://github.com/almihan/CellExLink_software"
Repository = "https://github.com/almihan/CellExLink_software"
Issues = "https://github.com/almihan/CellExLink_software/issues"

[project.scripts]
cellexlink = "cellexlink.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cellexlink = [
  "resources/*.tsv",
  "resources/*.jsonl"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "slow: requires downloaded model checkpoints, external services, or GPU resources"
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
